# grrs

./: Cargo.toml  README.md  build.rs
Documents/grrs/: README.md
Documents/grrs/src/: lib.rs  main.rs
Documents/grrs/tests/: cli.rs
proptest-regressions/: run.txt
src/: args.rs  init.rs  lib.rs  main.rs  run.rs
tests/: cli.rs
